resources/internal-lb.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: istio-ingressgateway
    meta.helm.sh/release-namespace: istio-system
    service.beta.kubernetes.io/azure-load-balancer-internal: "true" # This creates ILB from istio service to Azue internal LB
  finalizers:
  - service.kubernetes.io/load-balancer-cleanup
  labels:
    app: istio-ingressgateway
    app.kubernetes.io/instance: istio-ingressgateway
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: istio-ingressgateway
    app.kubernetes.io/part-of: istio
    app.kubernetes.io/version: 1.28.3
    helm.sh/chart: gateway-1.28.3
    istio: ingressgateway
    istio.io/dataplane-mode: none
  name: istio-ingressgateway
  namespace: istio-system
spec:
  allocateLoadBalancerNodePorts: true
  clusterIP: 172.20.238.181
  clusterIPs:
  - 172.20.238.181
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: status-port
    nodePort: 31772
    port: 15021
    protocol: TCP
    targetPort: 15021
  - name: http2
    nodePort: 32673
    port: 80
    protocol: TCP
    targetPort: 80
  - name: https
    nodePort: 30522
    port: 443
    protocol: TCP
    targetPort: 443
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  sessionAffinity: None
  type: LoadBalancer
