resources/virtual-service.yaml
# vserv.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-virtualservice
  namespace: istio-system
spec:
  hosts:
    - "*"
  gateways:
    - gateway
  http:
    - match:
        - uri:
            prefix: /nginx/app  # Match all URIs
      rewrite:
        uri: /  # Rewrite to root for the backend service
      route:
        - destination:
            host: nginx-lb.nginx.svc.cluster.local
            port:
              number: 80
